Add endpoint and change core method name
